Java modernization: collections, lambdas, try-with-resources, deprecations
- Replace Vector → List/ArrayList, Stack → Deque/ArrayDeque throughout
  (BlackBoard, GraphModel, BiconnectedComponents, GreedyColoring, LoadMatrix, ArrayX)
- Anonymous inner classes → lambdas (Init.java Listener, ShellServer/ShellServerCommands
  Thread subclasses, GraphReportExtensionAction Thread subclass)
- Add @FunctionalInterface to Listener interface
- Fix lowercase type params: <t> → <T> with @SuppressWarnings("unchecked") on getUserDefinedAttribute
- Apply try-with-resources to all file I/O (LoadMatrix, SaveMatrix, SaveWeightedMatrix,
  LoadSimpleGraph, SaveSimpleGraph, LoadGraph6Format, SaveGraph6Format, BSHExtensionLoader,
  GraphReportExtensionAction)
- Fix string concatenation in loops → StringBuilder (LoadMatrix.loadMatrixes)
- Replace deprecated new Double(String) → Double.valueOf(), Thread.stop() → Thread.interrupt()
- Fix non-varargs Method.invoke call in ParameterShower
- Upgrade build target: Java 8 → Java 11 (build.xml source/target, includeantruntime=false)
- Update GitHub Actions: setup-java@v4, Temurin JDK 11

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>